--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Bài tập 1 git</title>
     </head>
     <body>
-        <h1> Sinh viên: Mai Thị Hồng Khanh BN21V7X049</h1>
+        <h1> Sinh viên: Mai Thị Hồng Khanh _____________ BN21V7X049</h1>
     </body>
 </html>
